--- a/adm/assets/css/style.css
+++ b/adm/assets/css/style.css
@@ -5763,6 +5763,8 @@ label {
   margin: 0;
   font-size: 20px; }
 
+ 
+
 .mail_more_btn, .mail_nav, .mail_count_nav {
   margin: 30px 0; }
 
@@ -7408,3 +7410,7 @@ body.darker {
   border-color: transparent; }
 
 /*# sourceMappingURL=style.css.map */
+
+.sss{
+  color: yellow;
+}
